--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -144,6 +144,20 @@
                         const stripeSubscription = values[3].data;
                         const totalAmountGiven = stripeCharges.data.totalAmountGiven;
 
+                        // If there's no subscription, we can't show pertinent data here.
+                        if (!stripeSubscription.subscription) {
+                            $('#portfolioContainer').html(`
+                                <div class="border shadow-sm rounded p-3 mt-4">
+                                    <h3>No subscription</h3>
+                                    <p class="mb-0">You don't have an active subscription. Start one to see your portfolio.</p>
+                                    <div class="d-grid gap-2 mt-4">
+                                        <a class="btn btn-primary btn-lg" href="onboarding-causes.html" role="button">Start a subscription</a>
+                                    </div>
+                                </div>
+                            `);
+                            return;
+                        }
+
                         // Get the total that will be billed next period.
                         let billingAmount = 0;
                         for (const i of stripeSubscription.subscription.items.data) {
@@ -162,7 +176,7 @@
                             // Build the HTML.
                             causesHTML += `
                                 <tr>
-                                    <td>${causeData[c.id].cause_name}</td>
+                                    <td>${causeData[c.cause.id].cause_name}</td>
                                     <td>$${c.giving_amount}</td>
                                     <td>${Math.round((c.giving_amount / userData.budget) * 100)}%</td>
                                 </tr>
