--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -132,7 +132,7 @@
                             let checked = false;
                             if (userData.causes) {
                                 for (let c of userData.causes) {
-                                    if (c.id == causeDoc.id) {
+                                    if (c.cause.id == causeDoc.id) {
                                         checked = true;
                                         anyChecked = true;
                                         break;
@@ -244,9 +244,12 @@
 
         // Get the IDs of the selected causes.
         const selectedCauses = [];
-        $('#causesList').find('.causeCard').each(function( index ) {
+        $('#causesList').find('.causeCard').each(function(index) {
             if ($(this).find('.causeCheck').hasClass('checked')) {
-                selectedCauses.push({id: this.id, giving_amount: null});
+                selectedCauses.push({
+                    cause: firebase.firestore().collection("causes").doc(this.id),
+                    giving_amount: null
+                });
             }
         });
 
