--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -79,7 +79,7 @@
         <div class="row gx-3" style="width: 600px;">
             <div class="col-4">
                 <div class="d-grid gap-2">
-                    <a class="btn btn-outline-primary btn-lg" href="onboarding-causes.html" role="button">Back</a>
+                    <a class="btn btn-outline-primary btn-lg" href="onboarding-allocation.html" role="button">Back</a>
                 </div>
             </div>
             <div class="col-8">
