--- a/public/impact.html
+++ b/public/impact.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-                    <h3 class="m-0">Goodist</h3>
+                    <img src="images/logo-header.png" style="height: 50px" alt="Goodist logo">
                 </a>
 
                 <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-none d-sm-flex">
