Lots of visual work

--- a/public/account.html
+++ b/public/account.html
@@ -70,7 +70,7 @@
                             Impact
                         </a>
                     </li>
-                    <li class="bg-primary rounded">
+                    <li class="blue-background round15">
                         <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-light">
                             <i class="bi bi-person-circle" style="font-size: 1.25rem;"></i>
                             Account
@@ -109,7 +109,7 @@
                 Impact
             </a>
         </li>
-        <li class="bg-primary rounded">
+        <li class="blue-background round15">
             <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-light">
                 <i class="bi bi-person-circle" style="font-size: 1.25rem;"></i>
                 Account
@@ -177,7 +177,7 @@
                         }
 
                         $('#accountContainer').html(`
-                            <div class="border shadow-sm rounded p-3 mt-4">
+                            <div class="border shadow-sm round15 p-3 mt-4">
                                 <h3>Account</h3>
                                 <p class="mb-0">Name: ${userData.first_name}</p>
                                 <p class="mb-0">Email: ${user.email}</p>
@@ -186,7 +186,7 @@
                                 </div>
                             </div>
 
-                            <div class="border shadow-sm rounded p-3 mt-4">
+                            <div class="border shadow-sm round15 p-3 mt-4">
                                 <h3>Subscription</h3>
                                 ${subHTML}
                             </div>
