--- a/public/impact.html
+++ b/public/impact.html
@@ -64,7 +64,7 @@
                             Portfolio
                         </a>
                     </li>
-                    <li class="bg-primary rounded">
+                    <li class="blue-background round15">
                         <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-light">
                             <i class="bi bi-compass-fill" style="font-size: 1.25rem;"></i>
                             Impact
@@ -84,7 +84,7 @@
 
 <div class="container">
     <div id="impactContainer" style="max-width: 600px; margin: 0 auto;">
-        <div class="border shadow-sm rounded p-3 mt-4">
+        <div class="border shadow-sm round15 p-3 mt-4">
             <h3>Nothing to show here yet</h3>
             <p class="mb-0">Come back soon to see your giving in action!</p>
         </div>
@@ -102,7 +102,7 @@
                 Portfolio
             </a>
         </li>
-        <li class="bg-primary rounded">
+        <li class="blue-background round15">
             <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-light">
                 <i class="bi bi-compass-fill" style="font-size: 1.25rem;"></i>
                 Impact
