Preparing for making it public

--- a/public/onboarding-allocation.html
+++ b/public/onboarding-allocation.html
@@ -51,13 +51,18 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">How much would you like to give to each cause?</h1>
+    <div style="max-width: 600px; margin: 0 auto;">
+        <h3 class="mb-5">How much would you like to give to each cause?</h3>
+    </div>
 
     <div id="allocationSetter" class="mb-5" style="max-width: 375px; margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
+
+    <!-- Placeholder for footer so it doesn't cover up the content. -->
+    <div style="height: 125px; width: 100%;"></div>
 </div>
 
 <div id="footerMenuContainer" class="border-top p-3 bg-light" style="position: fixed; bottom: 0; left: 0; width: 100%;">
