--- a/public/stripe-return.html
+++ b/public/stripe-return.html
@@ -100,8 +100,14 @@
                 // User is signed in, see docs for a list of available properties.
                 // https://firebase.google.com/docs/reference/js/firebase.User
 
-                // Initialize Stripe.js using your publishable key
-                const stripe = Stripe('pk_test_51KWRApBLF6OO4Modm3Fp2GFWu3Vpl622eJCfQQ2a5qC17B8rF6klDi7KaCpvfGaSy5aWThfuJOGHUpshRA3KUgiO00oAlY8Znm');
+                // Set the stripe public key. Use the test key on localhost, production key everywhere else.
+                let stripePublicKey;
+                if (window.location.hostname == 'localhost') {
+                    stripePublicKey = 'pk_test_51KWRApBLF6OO4Modm3Fp2GFWu3Vpl622eJCfQQ2a5qC17B8rF6klDi7KaCpvfGaSy5aWThfuJOGHUpshRA3KUgiO00oAlY8Znm';
+                } else {
+                    stripePublicKey = 'pk_live_51KWRApBLF6OO4ModKEgGcAdpiMepxE9GCZhdsF4bWJH6hWnsczjTLy0Atdaqbl2sp89h8Fl80DP0ixeHrMbJIOmh00I5yQ8BfO';
+                }
+                const stripe = Stripe(stripePublicKey);
 
                 // Retrieve the "payment_intent_client_secret" query parameter appended to
                 // your return_url by Stripe.js
