--- a/public/onboarding-causes.html
+++ b/public/onboarding-causes.html
@@ -51,7 +51,9 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">Which causes would you like to support?</h1>
+    <div style="max-width: 600px; margin: 0 auto;">
+        <h3 class="mb-5">Which causes would you like to support?</h3>
+    </div>
 
     <div id="causeSelector" class="mb-5" style="max-width: 800px; margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
