--- a/public/onboarding-welcome.html
+++ b/public/onboarding-welcome.html
@@ -50,7 +50,7 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-<div class="container text-center py-5 px-3">
+<div class="container text-center py-5 px-3 pt-5">
     <img style="width: 200px; height: 200px;" src="images/welcome.png" alt="image of heart shaped world">
     <h1 class="mt-5 mb-3">Welcome!</h1>
     <p class="mb-5">Start by picking up to <span id="causeCount">10</span> causes to support</p>
