--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
     <div class="container">
       <div class="my-5 text-center">
-        <h1 class="mb-4">Sign in</h1>
+        <!--<h1 class="mb-4">Sign in</h1>-->
         <div id="firebaseui-auth-container"></div>
         <div id="loader" class="spinner-border text-primary mt-4" role="status">
           <span class="visually-hidden">Loading...</span>
