--- a/public/impact.html
+++ b/public/impact.html
@@ -6,6 +6,10 @@
     <title>Goodist | Impact</title>
     <link rel="shortcut icon" type="image/" href="images/favicon.ico"/>
 
+    <!-- LogRocket -->
+    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>window.LogRocket && window.LogRocket.init('ongjhk/goodist');</script>
+
     <!-- Bootstrap: CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap: JavaScript Bundle with Popper -->
